test_regress/t/t_fuzz_triand_bad.out
%Error: t/t_fuzz_triand_bad.v:8:12: Unsupported: Member call on object 'VARREF 'g'' which is a 'BASICDTYPE 'logic''
                                  : ... In instance t
   tri g=g.and.g;
           ^~~
%Error: Internal Error: t/t_fuzz_triand_bad.v:8:12: ../V3Width.cpp:#: Unlinked data type
                                                  : ... In instance t
   tri g=g.and.g;
           ^~~
                        ... See the manual and https://verilator.org for more assistance.
